--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.10",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
