--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.52.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "imagekitio-react": "^4.2.0",
     "lucide-react": "^0.428.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
