--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "lucide-react": "^0.428.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.10",
     "react-router-dom": "^6.26.1",
     "react-slick": "^0.30.2",
+    "recharts": "^2.13.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.10",
     "tailwind-merge": "^2.5.2",
